--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/GSioner/uniapp_shop#readme",
   "dependencies": {
     "@escook/request-miniprogram": "^0.2.1",
-    "@vant/weapp": "^1.10.5"
+    "@vant/weapp": "^1.10.5",
+    "mp-html": "^2.4.0"
   }
 }
